# test_app

./: Apple Card Transactions - June 2022.csv  Transact_dict_csv.csv  main.py  pyproject.toml
